--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "angular": "^1.7.4",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongoose": "^5.2.14"
